----------
v6.1.0-git
----------

[mms] Add message thread view to dynamic mailbox preview.
[mms] Better UI for changing quicksearch criteria in dynamic mailbox screen.
[mms] Collapse multiple mailbox export options in dynamic mailbox view to
      single action.
[mms] Importing a PGP personal key now only requires the private key.


----------
v6.0.2-git
----------

[mms] Don't delete saved draft on session close.
[mms] Improved generation and parsing of mbox files.
[mms] Fix adding mailboxes with mull delimiters to the IMAP folder tree (Bug
      #11672).
[mms] Fix editing templates in dynamic view.
[mms] Fix sending templates in dynamic view.
[mms] Allow iCalendar events to be added to the calendar even if they are
      missing the required UID parameter (Bug #11669).
[mms] Fix displaying flag changes for messages in search mailboxes in dynamic
      view (Bug #11622).
[mms] Save sent-mail when composing in the smartmobile view (Bug #11670).
[mms] Don't try to save sent-mail to a non-existent sent-mail mailbox.
[mms] Fix displaying encrypted message in dynamic preview when correct
      passphrase is entered (Bug #11661).
[mms] Purge IMAP cache data when upgrading from IMP 5.


------
v6.0.1
------

[mms] Fix shift-clicking in dynamic mailbox view when navigating to other
      mailboxes (Bug #11520).
[mms] Disallow pasting non-text elements into the HTML editor (Bug #11650).
[jan] Update Slovak translation (Jozef Sudolský <jozef.sudolsky@elbia.sk>).
[mms] If persistent IMAP caching is disabled, use an in-memory cache for the
      current page load.
[mms] Fix importing personal S/MIME certificate.
[mms] Correctly show ACL entry for current user even if ACL response for
      mailbox is empty.
[mms] Correctly remove unseen information from folder tree in dynamic mailbox
      view when mailbox is marked as not polled for new mail.
[mms] Fix expanding folder list in dynamic view when opening a mailbox and